Hero: centre le contenu + gap fixe, élimine l'espace vide sur grands écrans

--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -10,8 +10,8 @@
   .home-inner {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 4rem;
+    justify-content: center;
+    gap: 6rem;
     width: 100%;
     max-width: 1280px;
   }
